--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ config.js
 backend/.env
 backend/.env.local
 
+# Node modules
+node_modules/
+backend/node_modules/
+
 # OS files
 .DS_Store
 Thumbs.db
